--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@ window.onload = function() {
 <div id="content">
 <div id="contentBody">
 <h2 id="header">*</h2>
+<div id="buttons"></div>
 </div>
 </div>
 </div>
