--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ window.onload = function() {
 <div id="contentBody">
 <h2 id="header">*</h2>
 <div id="buttons"></div>
-<div id="Omar ALPrincE"><a href=" target="_blank"><img src="./Ressources/PokerFace.png" alt="@NazkyYT" width="150" height="100"></a></div>
+<div id="Omar ALPrincE"><a href=" target="_blank"><img src=" alt="" width="150" height="100"></a></div>
 </div>
 </div>
 </div>
